--- a/styles.css
+++ b/styles.css
@@ -1,47 +1,3 @@
-/* style.css */
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
-}
-
-#openModal:target ~ .modal {
-    display: block;
-}
-
-.modal-content {
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-}
-
-.modal-header {
-    background-color: #007bff;
-    color: white;
-    padding: 2px 16px;
-    text-align: center;
-    border-bottom: 1px solid #ddd;
-}
-
-.close-modal {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close-modal:hover,
-.close-modal:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
+.model-body{
+background-color:green;
 }
